[gd_scene load_steps=2 format=3 uid="uid://by3xm8rwvn2bb"]

[ext_resource type="Script" path="res://scripts/level_cell.gd" id="1_cell"]

[node name="LevelCell" type="PanelContainer"]
custom_minimum_size = Vector2(460, 560)
script = ExtResource("1_cell")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Content" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="Thumbnail" type="TextureRect" parent="MarginContainer/Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="LevelNumberBg" type="Panel" parent="MarginContainer/Content"]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 75.0
offset_bottom = 75.0

[node name="LevelNumberLabel" type="Label" parent="MarginContainer/Content/LevelNumberBg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StarsContainer" type="HBoxContainer" parent="MarginContainer/Content"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -70.0
offset_right = 75.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Star1" type="Label" parent="MarginContainer/Content/StarsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "☆"
horizontal_alignment = 1

[node name="Star2" type="Label" parent="MarginContainer/Content/StarsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "☆"
horizontal_alignment = 1

[node name="Star3" type="Label" parent="MarginContainer/Content/StarsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "☆"
horizontal_alignment = 1

[node name="OverlayIcon" type="Label" parent="MarginContainer/Content"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "▶"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[connection signal="pressed" from="MarginContainer/Content/Button" to="." method="_on_button_pressed"]
